Prepare for migration to Java 11 (#246)
* Fix first portion of compilation errors

* Dump Jacoco version to 0.8.2 that supports Java 11

* Fix lombok and jackson issue, remove deprecated method invocation, fix tests

* Fix tests

* Upgrade Spring Boot to 2.1.1

* Support building with both Java 8 and 11 at the same time